# routes/auth.go
@@ -23,5 +23,6 @@ func (r *authRoutes) Install(app *fiber.App) {
 	api.Put("/user/:id", AuthRequired, r.authController.PutUser)
 	api.Delete("/user/:id", AuthRequired, r.authController.DeleteUser)
 	api.Get("/verify/", r.authController.VeryfiyMobile)
+	api.Post("/changepassword/", AuthRequired, r.authController.Changepassword)
 
 }
